--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section>
         <h3>About Me</h3>
         <p>I am a passionate CIS student with skills in Web Development</p>
-        <img src="C:\Users\Dell Vostroo\Desktop\angular\image\myphoto.jpeg" alt="Your Photo" width="200">
+        <img src="C:\Users\Dell Vostroo\Desktop\angular\image\myphoto.jpeg" alt="My Photo" width="200">
     </section>
 
     <section>
@@ -43,7 +43,7 @@
     </section>
 
     <footer>
-        <p>Contact me at <a href="mailto:mklatifeh20@cit.just.edu.jo">your-email@example.com</a></p>
+        <p>Contact me at <a href="mailto:mklatifeh20@cit.just.edu.jo">mklatifeh20@cit.just.edu.jo</a></p>
     </footer>
 </body>
 </html>
