--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <section>
         <h3>About Me</h3>
         <p>I am a passionate CIS student with skills in Web Development</p>
-        <img src="C:\Users\Dell Vostroo\Desktop\angular\image\myphoto.jpeg" alt="My Photo" width="200">
+        <a href="image/myphoto.jpeg" target="_blank">
+            <img src="image/myphoto.jpeg" alt="My Photo">
+          </a>
     </section>
 
     <section>
